# HSE-Project-Archiver

archiver/src/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  accumulator.cpp  accumulator.h  archivate.cpp  archivate.h  archiver.cpp  bitstring.cpp  bitstring.h  constants.h  dearchivate.cpp  dearchivate.h  haffman.cpp  haffman.h  helper.cpp  node.cpp  node.h  read_nine_bits.cpp  read_nine_bits.h  write_eight_bits.cpp  write_eight_bits.h  write_encoded.cpp  write_encoded.h
archiver/tests/data/: archiver  lastnew_lines.arc  myempty2.arc
